modificando tiempo real

--- a/msvc-items-dev.properties
+++ b/msvc-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.text=Entorno desa
-configuracion.autor.nombre=carlos
-configuracion.autor.email=carlos@ine.mx
+configuracion.autor.nombre=andres
+configuracion.autor.email=andres@ine.mx
