--- a/msvc-items-dev.properties
+++ b/msvc-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.text=Entorno desa
-configuracion.autor.nombre=salazar
+configuracion.autor.nombre=salazar.
 configuracion.autor.email=salazar@ine.mx
